--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,9 +17,7 @@
         </svg>
       </a>
       <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
-        {% endfor %}
+        <a class="page-link" href="/about/">About</a>
       </div>
     </nav>
 
